--- a/backend/package.json
+++ b/backend/package.json
@@ -5,24 +5,19 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "keywords": ["delivery", "bebidas", "nodejs", "mongodb"],
   "author": "BebCom Delivery",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.0.0",
+    "mongoose": "^8.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "crypto": "^1.0.1"
+    "dotenv": "^16.3.1"
   },
   "engines": {
-    "node": "18.x"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/seu-usuario/bebcom-delivery.git"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
