--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,12 @@
 {
   "name": "bebcom-backend",
   "version": "1.0.0",
-  "description": "Backend seguro para BebCom Delivery",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": ["delivery", "bebidas", "nodejs", "mongodb"],
-  "author": "BebCom Delivery",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "cors": "^2.8.5"
   }
 }
