--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "bebcom-backend",
-  "version": "1.0.0",
+  "name": "bebcom-delivery-api",
+  "version": "2.2.0",
+  "description": "API para cardápio delivery BebCom",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
