--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "bebcom-delivery-api",
-  "version": "2.2.0",
-  "description": "API para cardápio delivery BebCom",
+  "name": "bebcom-backend",
+  "version": "3.0.0",
+  "description": "Backend para BebCom Delivery - Sistema de pedidos e gerenciamento",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=14.0.0"
-  }
+    "node": ">=16.0.0"
+  },
+  "keywords": [
+    "delivery",
+    "bebidas",
+    "pedidos",
+    "restaurant"
+  ],
+  "author": "BebCom Delivery",
+  "license": "MIT"
 }
