--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,16 @@
 {
   "name": "bebcom-backend",
-  "version": "3.0.0",
-  "description": "Backend para BebCom Delivery - Sistema de pedidos e gerenciamento",
+  "version": "3.1.0",
+  "description": "Backend para BebCom Delivery com MongoDB Atlas",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "mongodb": "^6.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -22,8 +18,8 @@
   "keywords": [
     "delivery",
     "bebidas",
-    "pedidos",
-    "restaurant"
+    "mongodb",
+    "atlas"
   ],
   "author": "BebCom Delivery",
   "license": "MIT"
