--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "bebcom-backend",
-  "version": "3.1.0",
-  "description": "Backend para BebCom Delivery com MongoDB Atlas",
+  "name": "bebcom-delivery-backend",
+  "version": "3.2.0",
+  "description": "Backend para BebCom Delivery com MongoDB",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "mongodb": "^6.0.0"
+    "mongodb": "^6.5.0",
+    "dotenv": "^16.4.1"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "keywords": [
     "delivery",
     "bebidas",
     "mongodb",
-    "atlas"
+    "api"
   ],
   "author": "BebCom Delivery",
   "license": "MIT"
