--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,21 @@
 {
   "name": "bebcom-delivery-backend",
-  "version": "3.2.0",
-  "description": "Backend para BebCom Delivery com MongoDB",
+  "version": "3.0.0",
+  "description": "Backend para BebCom Delivery",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "mongodb": "^6.5.0",
-    "dotenv": "^16.4.1"
+    "mongodb": "^6.5.0"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": [
-    "delivery",
-    "bebidas",
-    "mongodb",
-    "api"
-  ],
+  "keywords": ["delivery", "bebidas", "mongodb"],
   "author": "BebCom Delivery",
   "license": "MIT"
 }
